Fixed Сделать выплывающее меня для продукции и технической информации

--- a/20170423-issues.md
+++ b/20170423-issues.md
@@ -1,6 +1,6 @@
 # Header:
 - ~~Отступ от кнопки "Техническая информация" больше чем от других кнопок~~
-- Сделать выплывающее меня для продукции и технической информации
+- ~~Сделать выплывающее меня для продукции и технической информации~~
 - при наведении на кнопку "продукция" должно появляться: "пототолочные" и "настенные"
 - при наведении на кнопку "Техническая информация": "монтаж", "комплектация", "управление" и что-то еще сейчас не помню
 
