Fixed: Font цифра 2 на значке сравнения продукции имеет не тот шрифт

--- a/20170423-issues.md
+++ b/20170423-issues.md
@@ -1,11 +1,11 @@
 # Header:
 - ~~Отступ от кнопки "Техническая информация" больше чем от других кнопок~~
 - ~~Сделать выплывающее меня для продукции и технической информации~~
-  - при наведении на кнопку "продукция" должно появляться: "пототолочные" и "настенные"
-  - при наведении на кнопку "Техническая информация": "монтаж", "комплектация", "управление" и что-то еще сейчас не помню
+  - ~~при наведении на кнопку "продукция" должно появляться: "пототолочные" и "настенные"~~
+  - ~~при наведении на кнопку "Техническая информация": "монтаж", "комплектация", "управление" и что-то еще сейчас не помню~~
 
 # Блок "вас также может заинтересовать":
-- цифра 2 на значке сравнения продукции имеет не тот шрифт
+- ~~цифра 2 на значке сравнения продукции имеет не тот шрифт~~
  
 # Блоки "Новости", "Партнеры" и "Будте в курсе":
 - Они должны иметь такую высоту, чтобы рамки блоков "Партнеры" и "Будьте в курсе" были квадратными.
