--- a/20170423-issues.md
+++ b/20170423-issues.md
@@ -8,7 +8,7 @@
 - ~~цифра 2 на значке сравнения продукции имеет не тот шрифт~~
  
 # Блоки "Новости", "Партнеры" и "Будте в курсе":
-- Они должны иметь такую высоту, чтобы рамки блоков "Партнеры" и "Будьте в курсе" были квадратными.
+- ~~Они должны иметь такую высоту, чтобы рамки блоков "Партнеры" и "Будьте в курсе" были квадратными.~~
 - Кнопка "Подписаться" блока "Будьте в курсе" при наведении должна изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались.
  
 # "Продукт":
