Fixed : Button Primary При наведении должна изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались.

--- a/20170423-issues.md
+++ b/20170423-issues.md
@@ -9,7 +9,7 @@
  
 # Блоки "Новости", "Партнеры" и "Будте в курсе":
 - ~~Они должны иметь такую высоту, чтобы рамки блоков "Партнеры" и "Будьте в курсе" были квадратными.~~
-- Кнопка "Подписаться" блока "Будьте в курсе" при наведении должна изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались.
+- ~~Кнопка "Подписаться" блока "Будьте в курсе" при наведении должна изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались.~~
  
 # "Продукт":
 - Кнопка "Купить" при наведении должна изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались.
