Checked, Fixed # "Продукт": Кнопка "Купить" при наведении должна изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались.

--- a/20170423-issues.md
+++ b/20170423-issues.md
@@ -12,7 +12,7 @@
 - ~~Кнопка "Подписаться" блока "Будьте в курсе" при наведении должна изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались.~~
  
 # "Продукт":
-- Кнопка "Купить" при наведении должна изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались.
+- ~~Кнопка "Купить" при наведении должна изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались.~~
 - интерлиньяж текста "Характеристики" и "Комплектация" должен быть 18 px.
 - Текст (220-240 В .......MAC 3) на голубой полосе под картинкой светильника нужно выровнять по высоте, по центру полосы.
 - Две маленькие картинки слева от большой должны быть кнопками. При наведении рамка становится голобой, рамка активной картинки черная 2 px (как сейчас верхняя)
@@ -31,7 +31,7 @@
 - В таблице нужно отцентровать заголовки "цена" и "количество" относительно содержимого.
 - Добавить заголовок "Наименование" над название и артикулом светильника.
 - Плюсик в кружочке на кнопке "добавить товар по артикулу" не по центру кружочка
--Кнопки "Добавить товар по артикулу" и "Очистить корзину" лучше сделать черными с изменением цвета при наведении, как на странице интернет магазин во всплывающем окне сравнения. Как считаешь?
+- Кнопки "Добавить товар по артикулу" и "Очистить корзину" лучше сделать черными с изменением цвета при наведении, как на странице интернет магазин во всплывающем окне сравнения. Как считаешь?
  
 # Поиск:
 - Кнопки "Купить" при наведении должны изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались
@@ -41,7 +41,7 @@
 - на этой странице в правом верхнем углу должны быть кнопки (иконки) переключения между каталогом и интернет магазином
 - кнопку "подобрать" лучше сделать черными с изменением цвета при наведении, как на странице интернет магазин во всплывающем окне сравнения.
 - из-за увеличения ширины размер блоков со светильниками стал огромным. Предлагаю сделать раскладку блоков со светильниками в три столбца, на основе блока "вас также может заинтересовать" (они даже по ширине подойдут). Только в этом случае непонятно куда деть текст с описанием основных параметров светильника. Может что-то предложите?. 
--текст-кнопка "показать еще 6 товаров" должна быть без переноса.
+- текст-кнопка "показать еще 6 товаров" должна быть без переноса.
  
 # Каталог:
 - на этой странице в правом верхнем углу должны быть кнопки (иконки) переключения между каталогом и интернет магазином
