--- a/20170423-issues.md
+++ b/20170423-issues.md
@@ -15,7 +15,7 @@
 - ~~Кнопка "Купить" при наведении должна изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались.~~
 - **интерлиньяж текста "Характеристики" и "Комплектация" должен быть 18 px.**  - *Так он такой и есть*
 - ~~Текст (220-240 В .......MAC 3) на голубой полосе под картинкой светильника нужно выровнять по высоте, по центру полосы.~~
-- Две маленькие картинки слева от большой должны быть кнопками. При наведении рамка становится голобой, рамка активной картинки черная 2 px (как сейчас верхняя)
+- ~~Две маленькие картинки слева от большой должны быть кнопками. При наведении рамка становится голобой, рамка активной картинки черная 2 px (как сейчас верхняя)~~
  
 # Контент страницы "Новости":
 - Кружочки с номерами страниц какие-то очень стрёмные, пусть они при наведении лучше просто меняют цвет без пожирнения, а активная какая как сейчас показано только качество кружка страдает
