Fixed News Нажатые кнопки из подборки (я так понимаю что сейчас выбрана кнопка акции) должны иметь голубую рамку 2 px. (сейчас рамка кнопки акции имеет толщину 1 px)

--- a/20170423-issues.md
+++ b/20170423-issues.md
@@ -20,7 +20,7 @@
 # Контент страницы "Новости":
 - ~~**Кружочки с номерами страниц какие-то очень стрёмные, пусть они при наведении лучше просто меняют цвет без пожирнения, а активная какая как сейчас показано только качество кружка страдает**~~ - *Браузер это среда с растровой графикой, технически невозможно выполнить гладкие кривые на таком маленьком радиусе, придется смирится*
 - ~~Раздел "подборка" (вместе с кнопками) лучше немного поднять вверх, что бы было понятно что он относится к новостям~~
-- Нажатые кнопки из подборки (я так понимаю что сейчас выбрана кнопка акции) должны иметь голубую рамку 2 px. (сейчас рамка кнопки акции имеет толщину 1 px)
+- ~~Нажатые кнопки из подборки (я так понимаю что сейчас выбрана кнопка акции) должны иметь голубую рамку 2 px. (сейчас рамка кнопки акции имеет толщину 1 px)~~
  
 ##### Блок "Вас также может заинтересовать" страницы "Новости":
 - Насколько я помню здесь должен быть блок "недавно просмотренные". Он в принципе такой же, только без кнопки "показать еще...", но я решил это отметить :)
