Fixed News Removed features Removed  "показать еще..."

--- a/20170423-issues.md
+++ b/20170423-issues.md
@@ -23,7 +23,7 @@
 - ~~Нажатые кнопки из подборки (я так понимаю что сейчас выбрана кнопка акции) должны иметь голубую рамку 2 px. (сейчас рамка кнопки акции имеет толщину 1 px)~~
  
 ##### Блок "Вас также может заинтересовать" страницы "Новости":
-- Насколько я помню здесь должен быть блок "недавно просмотренные". Он в принципе такой же, только без кнопки "показать еще...", но я решил это отметить :)
+- ~~Насколько я помню здесь должен быть блок "недавно просмотренные". Он в принципе такой же, только без кнопки "показать еще...", но я решил это отметить :)~~
  
 # Корзина:
 - Кнопка "Оформить заказ" при наведении должна изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались
