Fixed, checked: Basket Кнопка "Оформить заказ" при наведении должна изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались

--- a/20170423-issues.md
+++ b/20170423-issues.md
@@ -26,7 +26,7 @@
 - ~~Насколько я помню здесь должен быть блок "недавно просмотренные". Он в принципе такой же, только без кнопки "показать еще...", но я решил это отметить :)~~
  
 # Корзина:
-- Кнопка "Оформить заказ" при наведении должна изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались
+- ~~Кнопка "Оформить заказ" при наведении должна изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались~~
 - Кнопка "Удалить" 
 - В таблице нужно отцентровать заголовки "цена" и "количество" относительно содержимого.
 - Добавить заголовок "Наименование" над название и артикулом светильника.
