Fixed Basket В таблице нужно отцентровать заголовки "цена" и "количество" относительно содержимого

--- a/20170423-issues.md
+++ b/20170423-issues.md
@@ -27,7 +27,7 @@
  
 # Корзина:
 - ~~Кнопка "Оформить заказ" при наведении должна изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались~~
-- Кнопка "Удалить" 
+- **Кнопка "Удалить"** - **Что кнопка удалить?**
 - В таблице нужно отцентровать заголовки "цена" и "количество" относительно содержимого.
 - Добавить заголовок "Наименование" над название и артикулом светильника.
 - Плюсик в кружочке на кнопке "добавить товар по артикулу" не по центру кружочка
