Fixed Basket В таблице нужно отцентровать заголовки "цена" и "количество" относительно содержимого. Добавить заголовок "Наименование" над название и артикулом светильника Кнопки "Добавить товар по артикулу" и "Очистить корзину" лучше сделать черными с изменением цвета при наведении, как на странице интернет магазин во всплывающем окне сравнения.

--- a/20170423-issues.md
+++ b/20170423-issues.md
@@ -28,10 +28,10 @@
 # Корзина:
 - ~~Кнопка "Оформить заказ" при наведении должна изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались~~
 - **Кнопка "Удалить"** - **Что кнопка удалить?**
-- В таблице нужно отцентровать заголовки "цена" и "количество" относительно содержимого.
-- Добавить заголовок "Наименование" над название и артикулом светильника.
-- Плюсик в кружочке на кнопке "добавить товар по артикулу" не по центру кружочка
-- Кнопки "Добавить товар по артикулу" и "Очистить корзину" лучше сделать черными с изменением цвета при наведении, как на странице интернет магазин во всплывающем окне сравнения. Как считаешь?
+- ~~В таблице нужно отцентровать заголовки "цена" и "количество" относительно содержимого.~~
+- ~~Добавить заголовок "Наименование" над название и артикулом светильника.~~
+- **Плюсик в кружочке на кнопке "добавить товар по артикулу" не по центру кружочка** - *Нет технической возможности двигать элемент на дробное число пикселей, увеличение высоты иконки приведет к увеличению высоты кнопки, увеличение высоты одной кнопки приведет к изменению размеров всех кнопок на сайте, и что мне делать?*
+- ~~Кнопки "Добавить товар по артикулу" и "Очистить корзину" лучше сделать черными с изменением цвета при наведении, как на странице интернет магазин во всплывающем окне сравнения. Как считаешь? - Сделал.~~
  
 # Поиск:
 - Кнопки "Купить" при наведении должны изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались
