--- a/20170423-issues.md
+++ b/20170423-issues.md
@@ -34,8 +34,8 @@
 - ~~Кнопки "Добавить товар по артикулу" и "Очистить корзину" лучше сделать черными с изменением цвета при наведении, как на странице интернет магазин во всплывающем окне сравнения. Как считаешь? - Сделал.~~
  
 # Поиск:
-- Кнопки "Купить" при наведении должны изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались
-- Кнопки "сбросить", "найти" и "подобрать" лучше сделать черными с изменением цвета при наведении, как на странице интернет магазин во всплывающем окне сравнения. Как считаешь?
+- ~~Кнопки "Купить" при наведении должны изменять толщину рамки с 1-го пикселя на 2. Предполагалось что толщина будет изменяться во внутрь кнопки чтобы пиксели не размывались~~
+- ~~Кнопки "сбросить", "найти" и "подобрать" лучше сделать черными с изменением цвета при наведении, как на странице интернет магазин во всплывающем окне сравнения. Как считаешь? - Сделал.~~
  
 # Интернет магазин:
 - на этой странице в правом верхнем углу должны быть кнопки (иконки) переключения между каталогом и интернет магазином
