--- a/20170423-issues.md
+++ b/20170423-issues.md
@@ -40,7 +40,7 @@
 # Интернет магазин:
 - **на этой странице в правом верхнем углу должны быть кнопки (иконки) переключения между каталогом и интернет магазином** - *Нарисуете - будут!*
 - ~~кнопку "подобрать" лучше сделать черными с изменением цвета при наведении, как на странице интернет магазин во всплывающем окне сравнения. - Сделал~~
-- из-за увеличения ширины размер блоков со светильниками стал огромным. Предлагаю сделать раскладку блоков со светильниками в три столбца, на основе блока "вас также может заинтересовать" (они даже по ширине подойдут). Только в этом случае непонятно куда деть текст с описанием основных параметров светильника. Может что-то предложите?. 
+- ~~из-за увеличения ширины размер блоков со светильниками стал огромным. Предлагаю сделать раскладку блоков со светильниками в три столбца, на основе блока "вас также может заинтересовать" (они даже по ширине подойдут). Только в этом случае непонятно куда деть текст с описанием основных параметров светильника. Может что-то предложите?.  - Там же и оставить где он есть~~
 - текст-кнопка "показать еще 6 товаров" должна быть без переноса.
  
 # Каталог:
