--- a/20170423-issues.md
+++ b/20170423-issues.md
@@ -46,6 +46,6 @@
 # Каталог:
 - **на этой странице в правом верхнем углу должны быть кнопки (иконки) переключения между каталогом и интернет магазином** - *Нарисуете - будут!*
 - ~~Две разделительные линии (вертикальную и горизонтальную) сделать 2 px. Мы не исправили в макете~~
-- Выделение активного размера (D100) сделать, чтобы линия огибала текст с выделенным размером. По умолчанию текст черный, активный текст черный, при наведении просто изменяется цвет текста. 
+- ~~Выделение активного размера (D100) сделать, чтобы линия огибала текст с выделенным размером. По умолчанию текст черный, активный текст черный, при наведении просто изменяется цвет текста.~~
 - Картинки с сериями. Нужно сделать чтобы выбранная серия имела черную рамку 2 px. При наведении все верно.
 - В таблице выровнять заголовки и значения.
