Added my issues

--- a/20170423-issues.md
+++ b/20170423-issues.md
@@ -49,3 +49,10 @@
 - ~~Выделение активного размера (D100) сделать, чтобы линия огибала текст с выделенным размером. По умолчанию текст черный, активный текст черный, при наведении просто изменяется цвет текста.~~
 - ~~Картинки с сериями. Нужно сделать чтобы выбранная серия имела черную рамку 2 px. При наведении все верно.~~
 - ~~В таблице выровнять заголовки и значения.~~
+
+
+#Мои комментарии
+- [Внимание вопрос - Угадай ширину бордера]()
+- [Выбрали самое неудачное изображение, как тут понять где картинка а где подложка, может что посоветуете?]()
+- [Интерлиньяж текста Характеристики и Комплектация должен быть 18 px. - Так он такой и есть]()
+- [Кнопка Удалить]()
