--- a/issues/20170423-issues.md
+++ b/issues/20170423-issues.md
@@ -52,7 +52,8 @@
 
 
 #Мои комментарии
-- [Внимание вопрос - Угадай ширину бордера]()
-- [Выбрали самое неудачное изображение, как тут понять где картинка а где подложка, может что посоветуете?]()
-- [Интерлиньяж текста Характеристики и Комплектация должен быть 18 px. - Так он такой и есть]()
-- [Кнопка Удалить]()
+- [Внимание вопрос - Угадай ширину бордера](https://github.com/chemaxa/zenit/blob/master/issues/20170423-issue-1.jpg)
+- [Выбрали самое неудачное изображение, как тут понять где картинка а где подложка, может что посоветуете?](https://github.com/chemaxa/zenit/blob/master/issues/20170423-issue-2.jpg)
+- [Интерлиньяж текста Характеристики и Комплектация должен быть 18 px. - Так он такой и есть](https://github.com/chemaxa/zenit/blob/master/issues/20170423-issue-3.jpg)
+- [Кнопка Удалить](https://github.com/chemaxa/zenit/blob/master/issues/20170423-issue-4.jpg)
+- На будущее создавайте все ищью пожалуйста здесь [https://github.com/chemaxa/zenit/issues](https://github.com/chemaxa/zenit/issues) кнопочка зеленая справа вверху New Issue
