--- a/issues/20170423-issues.md
+++ b/issues/20170423-issues.md
@@ -56,4 +56,4 @@
 - [Выбрали самое неудачное изображение, как тут понять где картинка а где подложка, может что посоветуете?](https://github.com/chemaxa/zenit/blob/master/issues/20170423-issue-2.jpg)
 - [Интерлиньяж текста Характеристики и Комплектация должен быть 18 px. - Так он такой и есть](https://github.com/chemaxa/zenit/blob/master/issues/20170423-issue-3.jpg)
 - [Кнопка Удалить](https://github.com/chemaxa/zenit/blob/master/issues/20170423-issue-4.jpg)
-- На будущее создавайте все ищью пожалуйста здесь [https://github.com/chemaxa/zenit/issues](https://github.com/chemaxa/zenit/issues) кнопочка зеленая справа вверху New Issue
+- На будущее создавайте все ищью пожалуйста здесь [https://github.com/chemaxa/zenit/issues](https://github.com/chemaxa/zenit/issues) кнопочка зеленая справа вверху [New Issue](https://github.com/chemaxa/zenit/issues/new)
